feat: UI implementations

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Emine Bozoğlan Ceylan | Eğitim Bursu - Emine Bozoğlan Ceylan | Scholarship Fund",
-  "description": "Sevgili Emine Bozoğlan Ceylan, 6 Şubat 2023'teki deprem felaketi sırasında trajik bir şekilde hayatını kaybetti. Emine Hanım, hayatını çocuklarına ve onların eğitimine adayan, sevgi dolu bir anne ve öğretmendi. Emine Hanım'ın mirası, onun değerlerini ve hayatını yansıtan bu eğitim fonu aracılığıyla yaşatılıyor. | Dear Emine Bozoğlan Ceylan, tragically lost her life during the earthquake disaster on February 6, 2023. Emine Hanım was a loving mother and teacher who dedicated her life to her children and their education. Emine Hanım's legacy is being preserved through this education fund, which reflects her values and life.",
+  "description": "Sevgili Emine Bozoğlan Ceylan, 6 Şubat 2023'teki deprem felaketi esnasında hayatını kaybetti. Emine Hanım, hayatını çocuklarına ve onların eğitimine adayan, sevgi dolu bir anne ve öğretmendi. Emine Hanım'ın mirası, onun değerlerini ve hayatını yansıtan bu eğitim fonu aracılığıyla yaşatılıyor. | Dear Emine Bozoğlan Ceylan, lost her life during the earthquake disaster on February 6, 2023. Emine Hanım was a loving mother and teacher who dedicated her life to her children and their education. Emine Hanım's legacy is being preserved through this education fund, which reflects her values and life.",
   "keywords": "Emine Bozoğlan Ceylan, Eğitim Bursu, Deprem, 6 Şubat 2023, Scholarship, Earthquake, February 6, 2023",
   "version": "1.0.0",
   "homepage": "https://eminebozoglanceylan.com",
