--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "author": "Osman Fikret Ceylan & Önder Ceylan",
   "license": "MIT",
   "scripts": {
-    "start": "live-server --open=/dist/index.html --host=localhost --port=8080 --no-browser",
-    "dev": "npx tailwindcss -i ./dist/css/style.css -o ./dist/style.css --watch",
-    "build": "npx tailwindcss -i ./dist/css/style.css -o ./dist/style.css"
+    "start": "live-server --open=/dist/index.html --host=localhost --port=8080 --no-browser"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
